# yippy

./: Cargo.toml  LICENSE  README.md  run_tests.sh  test.yaml
examples/: fibonacci.yaml
src/: main.rs
tests/: test_if.yaml  test_interpolation.yaml  test_set_print.yaml  test_while.yaml
